--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 }
 
 body {
+    padding-top: 70px; 
     font-family: 'Arial', sans-serif;
     line-height: 1.6;
     color: #333;
@@ -18,6 +19,10 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: fixed; /* Faz o cabeçalho ficar fixo */
+    width: 100%; /* Estende o cabeçalho pela largura total da página */
+    top: 0; /* Alinha o cabeçalho no topo da página */
+    z-index: 1000; /* Garante que o cabeçalho fique acima de outros elementos */
 }
 
 .logo {
@@ -53,23 +58,20 @@ nav a {
 /* Conteúdo principal */
 main {
     display: grid;
-    grid-template-columns: 1fr; /* Uma coluna para o banner */
-    grid-template-rows: auto 1fr; /* Duas linhas: uma para o banner, outra para as imagens */
-    gap: 20px; /* Espaço entre o banner e as imagens */
-}
-
-/* Grid para as imagens abaixo do banner */
-main > div:not(.container-img) {
-    display: grid;
     grid-template-columns: repeat(3, 1fr); /* Três colunas para as imagens */
-    gap: 20px;
+    grid-gap: 20px; /* Espaço entre as imagens */
 }
 
-/* Ajusta as imagens para não esticarem além do seu tamanho original */
-.product img, .contact img, .info img {
-    width: 100%; /* Faz as imagens se ajustarem à largura do contêiner */
-    height: auto; /* Mantém a proporção das imagens */
-    object-fit: contain; /* Mantém a proporção sem cortar */
+/* Grid para a imagem do banner */
+.container-img {
+    grid-column: 1 / -1; /* Faz com que a primeira div ocupe todas as três colunas */
+    margin-bottom: 20px; /* Espaço abaixo do banner */
+}
+
+/* Ajusta as imagens para ocuparem um espaço igual, mantendo a proporção */
+main > div:not(.container-img) img {
+    width: 100%;
+    height: auto;
 }
 
 /* Rodapé */
